--- a/src/index.html
+++ b/src/index.html
@@ -63,6 +63,6 @@
 				<div class="graph" id="plot-div"></div>
 			</div>
 		</div>
-		<script src="bundle.js" defer></script>
+		<script src="app.js" defer></script>
 	</body>
 </html>
