--- a/src/index.html
+++ b/src/index.html
@@ -24,31 +24,37 @@
 					<h2>Visualization Details</h2>
 				</div>
 				<div class="detail">
+					<h3>Sensor:</h3>
+					<select name="sensors" id="sensors" onchange="init()">
+						<option value="echosounder">Echosounder</option>
+						<option value="spectrometer" selected>Spectrometer</option>
+					</select>
+				</div>
+				<div class="detail">
 					<h3>File:</h3>
 					<select name="files" id="files"></select>
-					<!-- <input
-						type="file"
-						name="file"
-						id="csv-files"
-						accept="text/csv"
-						value="../../Data/depth_data"
-						onchange="getFiles()"
-						multiple
-					/> -->
 				</div>
 				<div class="detail">
 					<h3>Visualization:</h3>
-					<input type="radio" name="visualization" id="contour" checked />
-					<label for="map">Contour Plot</label>
-					<br />
-					<!-- <input type="radio" name="visualization" id="surface" />
-					<label for="surface">Surface Plot</label>
-					<br /> -->
-					<input type="radio" name="visualization" id="mesh" />
-					<label for="mesh">3D Mesh</label>
-					<br />
-					<input type="radio" name="visualization" id="map" />
-					<label for="map">Map Overlay</label>
+
+					<label for="contour" id="contour-label"
+						><input type="radio" name="visualization" id="contour" />Contour
+						Plot <br
+					/></label>
+
+					<label for="mesh" id="mesh-label"
+						><input type="radio" name="visualization" id="mesh" />3D Mesh <br
+					/></label>
+
+					<label for="map" id="map-label"
+						><input type="radio" name="visualization" id="map" />Map Overlay
+						<br
+					/></label>
+
+					<label for="spectrum" id="spectrum-label"
+						><input type="radio" name="visualization" id="spectrum" />Spectrum
+						<br
+					/></label>
 				</div>
 
 				<div class="confirm-button">
