--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
 					<h3>Sensor:</h3>
 					<select name="sensors" id="sensors" onchange="init()">
 						<option value="echosounder">Echosounder</option>
-						<option value="spectrometer" selected>Spectrometer</option>
+						<option value="spectrometer">Spectrometer</option>
 					</select>
 				</div>
 				<div class="detail">
