updated libraries and parsing method ignores nulls

--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,9 @@
 		<title>HOPHS</title>
 		<link rel="stylesheet" href="style.css" />
 
-		<script src="../assets/lib/d3.js"></script>
-		<script src="../assets/lib/jquery.js"></script>
-		<script src="../assets/lib/plotly.js"></script>
+		<script src="../assets/lib/d3-7.6.1.min.js"></script>
+		<script src="../assets/lib/jquery-3.6.0.min.js"></script>
+		<script src="../assets/lib/plotly-2.14.0.min.js"></script>
 	</head>
 	<body>
 		<div class="banner">
