Now fetches csv files from BOB's repo.

--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,13 @@
 		<title>HOPHS</title>
 		<link rel="stylesheet" href="style.css" />
 
+		<!-- Libraries -->
 		<script src="../assets/lib/d3-7.6.1.min.js"></script>
 		<script src="../assets/lib/jquery-3.6.0.min.js"></script>
 		<script src="../assets/lib/plotly-2.14.0.min.js"></script>
+
+		<!-- Main JS -->
+		<script src="app.js" defer></script>
 	</head>
 	<body>
 		<div class="banner">
@@ -69,6 +73,5 @@
 				<div class="graph" id="plot-div"></div>
 			</div>
 		</div>
-		<script src="app.js" defer></script>
 	</body>
 </html>
