--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="author" content="Bio-Optics Undergraduate Researchers" />
 		<title>Data Visualization App</title>
-		<script src="../src/index.js"></script>
+		<script src="..src/index.js" defer></script>
 	</head>
 	<body>
 		<div id="root"></div>
